p2ws_package/Devpp2ws-Package/objects/Aircraft__c.object
<CustomObject>
    <fields>
        <fullName>Aircraft_Case_Status__c</fullName>
        <formula>IF(  Number_Of_NoActions__c  &gt; 0 , IMAGE(&quot;/resource/OrangeCase&quot;,&quot;&quot;,20,20) + &apos; &apos;,IMAGE(&quot;/resource/WhiteCase&quot;,&quot;&quot;,20,20))&amp; 

IF(  Number_Of_Blocks__c  &gt; 0 , IMAGE(&quot;/resource/RedCase&quot;,&quot;&quot;,20,20) + &apos; &apos;, IMAGE(&quot;/resource/WhiteCase&quot;,&quot;&quot;,20,20))&amp; 

IF(  Number_Of_Malfunctions__c  &gt; 0 , IMAGE(&quot;/resource/YellowCase&quot;,&quot;&quot;,20,20) + &apos; &apos;,IMAGE(&quot;/resource/WhiteCase&quot;,&quot;&quot;,20,20))&amp; 

IF(  Number_Of_Serviceables__c  &gt; 0, IMAGE(&quot;/resource/BlueCase&quot;,&quot;&quot;,20,20) + &apos; &apos;,IMAGE(&quot;/resource/WhiteCase&quot;,&quot;&quot;,20,20))</formula>
        <label>Aircraft Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aircraft_Configuration__c</fullName>
        <label>A/C CONF.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aircraft_Description__c</fullName>
        <label>A/C Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aircraft_Main_Type__c</fullName>
        <label>Aircraft Main Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aircraft_Name_EN__c</fullName>
        <label>A/C Name EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aircraft_Name_TH__c</fullName>
        <label>A/C Name TH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aircraft_Registration__c</fullName>
        <externalId>true</externalId>
        <label>Aircraft Registration</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Aircraft_Sub_Type__c</fullName>
        <label>Aircraft Sub Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aircraft_Type__c</fullName>
        <label>A/C Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cabin_Duty__c</fullName>
        <description>The role of an air cabin crew member is to provide excellent customer service to passengers while ensuring their comfort and safety throughout the flight.</description>
        <label>Cabin Duty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cabin_Ver__c</fullName>
        <label>Cabin Ver.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEP_STN__c</fullName>
        <label>DEP STN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery__c</fullName>
        <label>Delivery</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_LOPA_Ready__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To identify that LOPA is ready for this aircraft.</description>
        <label>Is LOPA Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOPA_Business_Class__c</fullName>
        <label>LOPA Business Class</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LOPA_Economy_Class__c</fullName>
        <label>LOPA Economy Class</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LOPA_First_Class__c</fullName>
        <label>LOPA First Class</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Line_no__c</fullName>
        <label>Line no.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Msn__c</fullName>
        <label>Msn.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Blocks__c</fullName>
        <description>Displays the number of cases with action being blocked</description>
        <label>Number Of Blocks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Completes__c</fullName>
        <description>Displays the number of cases with action being complete</description>
        <label>Number Of Completes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Malfunctions__c</fullName>
        <description>Displays the number of cases with action being malfunction</description>
        <label>Number Of Malfunctions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_NoActions__c</fullName>
        <description>Displays the number of cases with no action</description>
        <label>Number Of NoActions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Serviceables__c</fullName>
        <description>Displays the number of cases with action being serviceable</description>
        <label>Number Of Serviceables</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Aircraft</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>Aircraft_Name_EN__c</columns>
        <columns>Cabin_Duty__c</columns>
        <columns>Msn__c</columns>
        <columns>Cabin_Ver__c</columns>
        <columns>Delivery__c</columns>
        <columns>Aircraft_Description__c</columns>
        <columns>Aircraft_Configuration__c</columns>
        <columns>Aircraft_Type__c</columns>
        <columns>Aircraft_Main_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>A/C REG</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aircrafts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>